k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama-ia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
        intent: ia-llm
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: 'IfNotPresent'
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
        ports:
        - containerPort: 11434
      tolerations:
      - key: "intent"
        operator: "Equal"
        value: "ia-llm"
        effect: "NoSchedule"
