k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ollama-ui-gateway
  namespace: ollama-ia
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - "*"
      port:
        name: https-workloads
        number: 443
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ollama
  namespace: ollama-ia
spec:
  gateways:
    - ollama-ui-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: ollama-ia-service.ollama-ia.svc.cluster.local
            port:
              number: 11434
          weight: 100
